// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TruncateText > When rendering variants > and the line count 1 > renders correctly 1`] = `
<span
  class="line-clamp-1"
/>
`;

exports[`TruncateText > When rendering variants > and the line count 2 > renders correctly 1`] = `
<span
  class="line-clamp-2"
/>
`;

exports[`TruncateText > When rendering variants > and the line count 3 > renders correctly 1`] = `
<span
  class="line-clamp-3"
/>
`;
